qt/gen_qwidget.h

typedef struct QAction QAction;
typedef struct QCursor QCursor;
typedef struct QGraphicsProxyWidget QGraphicsProxyWidget;
typedef struct QKeySequence QKeySequence;
typedef struct QLayout QLayout;
typedef struct QLocale QLocale;
typedef struct QMargins QMargins;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QSizePolicy QSizePolicy;
typedef struct QWidget QWidget;
struct miqt_string QWidget_whatsThis(const QWidget* self);
struct miqt_string QWidget_accessibleName(const QWidget* self);
void QWidget_setAccessibleName(QWidget* self, struct miqt_string name);
struct miqt_string QWidget_accessibleDescription(const QWidget* self);
void QWidget_setAccessibleDescription(QWidget* self, struct miqt_string description);
void QWidget_setLayoutDirection(QWidget* self, int direction);
int QWidget_layoutDirection(const QWidget* self);
void QWidget_unsetLayoutDirection(QWidget* self);
void QWidget_setLocale(QWidget* self, QLocale* locale);
QLocale* QWidget_locale(const QWidget* self);
void QWidget_unsetLocale(QWidget* self);
bool QWidget_isRightToLeft(const QWidget* self);
bool QWidget_isLeftToRight(const QWidget* self);
void QWidget_setFocus(QWidget* self);
bool QWidget_isActiveWindow(const QWidget* self);
void QWidget_activateWindow(QWidget* self);
void QWidget_clearFocus(QWidget* self);
void QWidget_setFocusWithReason(QWidget* self, int reason);
int QWidget_focusPolicy(const QWidget* self);
void QWidget_setFocusPolicy(QWidget* self, int policy);
bool QWidget_hasFocus(const QWidget* self);
void QWidget_setTabOrder(QWidget* param1, QWidget* param2);
void QWidget_setFocusProxy(QWidget* self, QWidget* focusProxy);
QWidget* QWidget_focusProxy(const QWidget* self);
int QWidget_contextMenuPolicy(const QWidget* self);
void QWidget_setContextMenuPolicy(QWidget* self, int policy);
void QWidget_grabMouse(QWidget* self);
void QWidget_grabMouseWithQCursor(QWidget* self, QCursor* param1);
void QWidget_releaseMouse(QWidget* self);
void QWidget_grabKeyboard(QWidget* self);
void QWidget_releaseKeyboard(QWidget* self);
int QWidget_grabShortcut(QWidget* self, QKeySequence* key);
void QWidget_releaseShortcut(QWidget* self, int id);
void QWidget_setShortcutEnabled(QWidget* self, int id);
void QWidget_setShortcutAutoRepeat(QWidget* self, int id);
QWidget* QWidget_mouseGrabber();
QWidget* QWidget_keyboardGrabber();
bool QWidget_updatesEnabled(const QWidget* self);
void QWidget_setUpdatesEnabled(QWidget* self, bool enable);
QGraphicsProxyWidget* QWidget_graphicsProxyWidget(const QWidget* self);
void QWidget_update(QWidget* self);
void QWidget_repaint(QWidget* self);
void QWidget_update2(QWidget* self, int x, int y, int w, int h);
void QWidget_updateWithQRect(QWidget* self, QRect* param1);
void QWidget_updateWithQRegion(QWidget* self, QRegion* param1);
void QWidget_repaint2(QWidget* self, int x, int y, int w, int h);
void QWidget_repaintWithQRect(QWidget* self, QRect* param1);
void QWidget_repaintWithQRegion(QWidget* self, QRegion* param1);
void QWidget_setVisible(QWidget* self, bool visible);
void QWidget_setHidden(QWidget* self, bool hidden);
void QWidget_show(QWidget* self);
void QWidget_hide(QWidget* self);
void QWidget_showMinimized(QWidget* self);
void QWidget_showMaximized(QWidget* self);
void QWidget_showFullScreen(QWidget* self);
void QWidget_showNormal(QWidget* self);
bool QWidget_close(QWidget* self);
void QWidget_raise(QWidget* self);
void QWidget_lower(QWidget* self);
void QWidget_stackUnder(QWidget* self, QWidget* param1);
void QWidget_move(QWidget* self, int x, int y);
void QWidget_moveWithQPoint(QWidget* self, QPoint* param1);
void QWidget_resize(QWidget* self, int w, int h);
void QWidget_resizeWithQSize(QWidget* self, QSize* param1);
void QWidget_setGeometry(QWidget* self, int x, int y, int w, int h);
void QWidget_setGeometryWithGeometry(QWidget* self, QRect* geometry);
struct miqt_string QWidget_saveGeometry(const QWidget* self);
bool QWidget_restoreGeometry(QWidget* self, struct miqt_string geometry);
void QWidget_adjustSize(QWidget* self);
bool QWidget_isVisible(const QWidget* self);
bool QWidget_isVisibleTo(const QWidget* self, QWidget* param1);
bool QWidget_isHidden(const QWidget* self);
bool QWidget_isMinimized(const QWidget* self);
bool QWidget_isMaximized(const QWidget* self);
bool QWidget_isFullScreen(const QWidget* self);
int QWidget_windowState(const QWidget* self);
void QWidget_setWindowState(QWidget* self, int state);
void QWidget_overrideWindowState(QWidget* self, int state);
QSize* QWidget_sizeHint(const QWidget* self);
QSize* QWidget_minimumSizeHint(const QWidget* self);
QSizePolicy* QWidget_sizePolicy(const QWidget* self);
void QWidget_setSizePolicy(QWidget* self, QSizePolicy* sizePolicy);
void QWidget_setSizePolicy2(QWidget* self, int horizontal, int vertical);
int QWidget_heightForWidth(const QWidget* self, int param1);
bool QWidget_hasHeightForWidth(const QWidget* self);
QRegion* QWidget_visibleRegion(const QWidget* self);
void QWidget_setContentsMargins(QWidget* self, int left, int top, int right, int bottom);
void QWidget_setContentsMarginsWithMargins(QWidget* self, QMargins* margins);
void QWidget_getContentsMargins(const QWidget* self, int* left, int* top, int* right, int* bottom);
QMargins* QWidget_contentsMargins(const QWidget* self);
QRect* QWidget_contentsRect(const QWidget* self);
QLayout* QWidget_layout(const QWidget* self);
void QWidget_setLayout(QWidget* self, QLayout* layout);
void QWidget_updateGeometry(QWidget* self);
void QWidget_setParent(QWidget* self, QWidget* parent);
void QWidget_setParent2(QWidget* self, QWidget* parent, int f);
void QWidget_scroll(QWidget* self, int dx, int dy);
void QWidget_scroll2(QWidget* self, int dx, int dy, QRect* param3);
QWidget* QWidget_focusWidget(const QWidget* self);
QWidget* QWidget_nextInFocusChain(const QWidget* self);
QWidget* QWidget_previousInFocusChain(const QWidget* self);
bool QWidget_acceptDrops(const QWidget* self);
void QWidget_setAcceptDrops(QWidget* self, bool on);
void QWidget_addAction(QWidget* self, QAction* action);
void QWidget_addActions(QWidget* self, struct miqt_array /* of QAction* */  actions);
void QWidget_insertActions(QWidget* self, QAction* before, struct miqt_array /* of QAction* */  actions);
void QWidget_insertAction(QWidget* self, QAction* before, QAction* action);
void QWidget_removeAction(QWidget* self, QAction* action);
struct miqt_array /* of QAction* */  QWidget_actions(const QWidget* self);
QWidget* QWidget_parentWidget(const QWidget* self);
void QWidget_setWindowFlags(QWidget* self, int type);
int QWidget_windowFlags(const QWidget* self);
void QWidget_setWindowFlag(QWidget* self, int param1);
void QWidget_overrideWindowFlags(QWidget* self, int type);
int QWidget_windowType(const QWidget* self);
QWidget* QWidget_find(uintptr_t param1);
QWidget* QWidget_childAt(const QWidget* self, int x, int y);
QWidget* QWidget_childAtWithQPoint(const QWidget* self, QPoint* p);
void QWidget_setAttribute(QWidget* self, int param1);
bool QWidget_testAttribute(const QWidget* self, int param1);
QPaintEngine* QWidget_paintEngine(const QWidget* self);
void QWidget_ensurePolished(const QWidget* self);