qt/gen_qwidget.nim

proc fcQWidget_whatsThis(self: pointer, ): struct_miqt_string {.importc: "QWidget_whatsThis".}
proc fcQWidget_accessibleName(self: pointer, ): struct_miqt_string {.importc: "QWidget_accessibleName".}
proc fcQWidget_setAccessibleName(self: pointer, name: struct_miqt_string): void {.importc: "QWidget_setAccessibleName".}
proc fcQWidget_accessibleDescription(self: pointer, ): struct_miqt_string {.importc: "QWidget_accessibleDescription".}
proc fcQWidget_setAccessibleDescription(self: pointer, description: struct_miqt_string): void {.importc: "QWidget_setAccessibleDescription".}
proc fcQWidget_setLayoutDirection(self: pointer, direction: cint): void {.importc: "QWidget_setLayoutDirection".}
proc fcQWidget_layoutDirection(self: pointer, ): cint {.importc: "QWidget_layoutDirection".}
proc fcQWidget_unsetLayoutDirection(self: pointer, ): void {.importc: "QWidget_unsetLayoutDirection".}
proc fcQWidget_setLocale(self: pointer, locale: pointer): void {.importc: "QWidget_setLocale".}
proc fcQWidget_locale(self: pointer, ): pointer {.importc: "QWidget_locale".}
proc fcQWidget_unsetLocale(self: pointer, ): void {.importc: "QWidget_unsetLocale".}
proc fcQWidget_isRightToLeft(self: pointer, ): bool {.importc: "QWidget_isRightToLeft".}
proc fcQWidget_isLeftToRight(self: pointer, ): bool {.importc: "QWidget_isLeftToRight".}
proc fcQWidget_setFocus(self: pointer, ): void {.importc: "QWidget_setFocus".}
proc fcQWidget_isActiveWindow(self: pointer, ): bool {.importc: "QWidget_isActiveWindow".}
proc fcQWidget_activateWindow(self: pointer, ): void {.importc: "QWidget_activateWindow".}
proc fcQWidget_clearFocus(self: pointer, ): void {.importc: "QWidget_clearFocus".}
proc fcQWidget_setFocusWithReason(self: pointer, reason: cint): void {.importc: "QWidget_setFocusWithReason".}
proc fcQWidget_focusPolicy(self: pointer, ): cint {.importc: "QWidget_focusPolicy".}
proc fcQWidget_setFocusPolicy(self: pointer, policy: cint): void {.importc: "QWidget_setFocusPolicy".}
proc fcQWidget_hasFocus(self: pointer, ): bool {.importc: "QWidget_hasFocus".}
proc fcQWidget_setTabOrder(param1: pointer, param2: pointer): void {.importc: "QWidget_setTabOrder".}
proc fcQWidget_setFocusProxy(self: pointer, focusProxy: pointer): void {.importc: "QWidget_setFocusProxy".}
proc fcQWidget_focusProxy(self: pointer, ): pointer {.importc: "QWidget_focusProxy".}
proc fcQWidget_contextMenuPolicy(self: pointer, ): cint {.importc: "QWidget_contextMenuPolicy".}
proc fcQWidget_setContextMenuPolicy(self: pointer, policy: cint): void {.importc: "QWidget_setContextMenuPolicy".}
proc fcQWidget_grabMouse(self: pointer, ): void {.importc: "QWidget_grabMouse".}
proc fcQWidget_grabMouseWithQCursor(self: pointer, param1: pointer): void {.importc: "QWidget_grabMouseWithQCursor".}
proc fcQWidget_releaseMouse(self: pointer, ): void {.importc: "QWidget_releaseMouse".}
proc fcQWidget_grabKeyboard(self: pointer, ): void {.importc: "QWidget_grabKeyboard".}
proc fcQWidget_releaseKeyboard(self: pointer, ): void {.importc: "QWidget_releaseKeyboard".}
proc fcQWidget_grabShortcut(self: pointer, key: pointer): cint {.importc: "QWidget_grabShortcut".}
proc fcQWidget_releaseShortcut(self: pointer, id: cint): void {.importc: "QWidget_releaseShortcut".}
proc fcQWidget_setShortcutEnabled(self: pointer, id: cint): void {.importc: "QWidget_setShortcutEnabled".}
proc fcQWidget_setShortcutAutoRepeat(self: pointer, id: cint): void {.importc: "QWidget_setShortcutAutoRepeat".}
proc fcQWidget_mouseGrabber(): pointer {.importc: "QWidget_mouseGrabber".}
proc fcQWidget_keyboardGrabber(): pointer {.importc: "QWidget_keyboardGrabber".}
proc fcQWidget_updatesEnabled(self: pointer, ): bool {.importc: "QWidget_updatesEnabled".}
proc fcQWidget_setUpdatesEnabled(self: pointer, enable: bool): void {.importc: "QWidget_setUpdatesEnabled".}
proc fcQWidget_graphicsProxyWidget(self: pointer, ): pointer {.importc: "QWidget_graphicsProxyWidget".}
proc fcQWidget_update(self: pointer, ): void {.importc: "QWidget_update".}
proc fcQWidget_repaint(self: pointer, ): void {.importc: "QWidget_repaint".}
proc fcQWidget_update2(self: pointer, x: cint, y: cint, w: cint, h: cint): void {.importc: "QWidget_update2".}
proc fcQWidget_updateWithQRect(self: pointer, param1: pointer): void {.importc: "QWidget_updateWithQRect".}
proc fcQWidget_updateWithQRegion(self: pointer, param1: pointer): void {.importc: "QWidget_updateWithQRegion".}
proc fcQWidget_repaint2(self: pointer, x: cint, y: cint, w: cint, h: cint): void {.importc: "QWidget_repaint2".}
proc fcQWidget_repaintWithQRect(self: pointer, param1: pointer): void {.importc: "QWidget_repaintWithQRect".}
proc fcQWidget_repaintWithQRegion(self: pointer, param1: pointer): void {.importc: "QWidget_repaintWithQRegion".}
proc fcQWidget_setVisible(self: pointer, visible: bool): void {.importc: "QWidget_setVisible".}
proc fcQWidget_setHidden(self: pointer, hidden: bool): void {.importc: "QWidget_setHidden".}
proc fcQWidget_show(self: pointer, ): void {.importc: "QWidget_show".}
proc fcQWidget_hide(self: pointer, ): void {.importc: "QWidget_hide".}
proc fcQWidget_showMinimized(self: pointer, ): void {.importc: "QWidget_showMinimized".}
proc fcQWidget_showMaximized(self: pointer, ): void {.importc: "QWidget_showMaximized".}
proc fcQWidget_showFullScreen(self: pointer, ): void {.importc: "QWidget_showFullScreen".}
proc fcQWidget_showNormal(self: pointer, ): void {.importc: "QWidget_showNormal".}
proc fcQWidget_close(self: pointer, ): bool {.importc: "QWidget_close".}
proc fcQWidget_raiseX(self: pointer, ): void {.importc: "QWidget_raise".}
proc fcQWidget_lower(self: pointer, ): void {.importc: "QWidget_lower".}
proc fcQWidget_stackUnder(self: pointer, param1: pointer): void {.importc: "QWidget_stackUnder".}
proc fcQWidget_move(self: pointer, x: cint, y: cint): void {.importc: "QWidget_move".}
proc fcQWidget_moveWithQPoint(self: pointer, param1: pointer): void {.importc: "QWidget_moveWithQPoint".}
proc fcQWidget_resize(self: pointer, w: cint, h: cint): void {.importc: "QWidget_resize".}
proc fcQWidget_resizeWithQSize(self: pointer, param1: pointer): void {.importc: "QWidget_resizeWithQSize".}
proc fcQWidget_setGeometry(self: pointer, x: cint, y: cint, w: cint, h: cint): void {.importc: "QWidget_setGeometry".}
proc fcQWidget_setGeometryWithGeometry(self: pointer, geometry: pointer): void {.importc: "QWidget_setGeometryWithGeometry".}
proc fcQWidget_saveGeometry(self: pointer, ): struct_miqt_string {.importc: "QWidget_saveGeometry".}
proc fcQWidget_restoreGeometry(self: pointer, geometry: struct_miqt_string): bool {.importc: "QWidget_restoreGeometry".}
proc fcQWidget_adjustSize(self: pointer, ): void {.importc: "QWidget_adjustSize".}
proc fcQWidget_isVisible(self: pointer, ): bool {.importc: "QWidget_isVisible".}
proc fcQWidget_isVisibleTo(self: pointer, param1: pointer): bool {.importc: "QWidget_isVisibleTo".}
proc fcQWidget_isHidden(self: pointer, ): bool {.importc: "QWidget_isHidden".}
proc fcQWidget_isMinimized(self: pointer, ): bool {.importc: "QWidget_isMinimized".}
proc fcQWidget_isMaximized(self: pointer, ): bool {.importc: "QWidget_isMaximized".}
proc fcQWidget_isFullScreen(self: pointer, ): bool {.importc: "QWidget_isFullScreen".}
proc fcQWidget_windowState(self: pointer, ): cint {.importc: "QWidget_windowState".}
proc fcQWidget_setWindowState(self: pointer, state: cint): void {.importc: "QWidget_setWindowState".}
proc fcQWidget_overrideWindowState(self: pointer, state: cint): void {.importc: "QWidget_overrideWindowState".}
proc fcQWidget_sizeHint(self: pointer, ): pointer {.importc: "QWidget_sizeHint".}
proc fcQWidget_minimumSizeHint(self: pointer, ): pointer {.importc: "QWidget_minimumSizeHint".}
proc fcQWidget_sizePolicy(self: pointer, ): pointer {.importc: "QWidget_sizePolicy".}
proc fcQWidget_setSizePolicy(self: pointer, sizePolicy: pointer): void {.importc: "QWidget_setSizePolicy".}
proc fcQWidget_setSizePolicy2(self: pointer, horizontal: cint, vertical: cint): void {.importc: "QWidget_setSizePolicy2".}
proc fcQWidget_heightForWidth(self: pointer, param1: cint): cint {.importc: "QWidget_heightForWidth".}
proc fcQWidget_hasHeightForWidth(self: pointer, ): bool {.importc: "QWidget_hasHeightForWidth".}
proc fcQWidget_visibleRegion(self: pointer, ): pointer {.importc: "QWidget_visibleRegion".}
proc fcQWidget_setContentsMargins(self: pointer, left: cint, top: cint, right: cint, bottom: cint): void {.importc: "QWidget_setContentsMargins".}
proc fcQWidget_setContentsMarginsWithMargins(self: pointer, margins: pointer): void {.importc: "QWidget_setContentsMarginsWithMargins".}
proc fcQWidget_getContentsMargins(self: pointer, left: ptr cint, top: ptr cint, right: ptr cint, bottom: ptr cint): void {.importc: "QWidget_getContentsMargins".}
proc fcQWidget_contentsMargins(self: pointer, ): pointer {.importc: "QWidget_contentsMargins".}
proc fcQWidget_contentsRect(self: pointer, ): pointer {.importc: "QWidget_contentsRect".}
proc fcQWidget_layout(self: pointer, ): pointer {.importc: "QWidget_layout".}
proc fcQWidget_setLayout(self: pointer, layout: pointer): void {.importc: "QWidget_setLayout".}
proc fcQWidget_updateGeometry(self: pointer, ): void {.importc: "QWidget_updateGeometry".}
proc fcQWidget_setParent(self: pointer, parent: pointer): void {.importc: "QWidget_setParent".}
proc fcQWidget_setParent2(self: pointer, parent: pointer, f: cint): void {.importc: "QWidget_setParent2".}
proc fcQWidget_scroll(self: pointer, dx: cint, dy: cint): void {.importc: "QWidget_scroll".}
proc fcQWidget_scroll2(self: pointer, dx: cint, dy: cint, param3: pointer): void {.importc: "QWidget_scroll2".}
proc fcQWidget_focusWidget(self: pointer, ): pointer {.importc: "QWidget_focusWidget".}
proc fcQWidget_nextInFocusChain(self: pointer, ): pointer {.importc: "QWidget_nextInFocusChain".}
proc fcQWidget_previousInFocusChain(self: pointer, ): pointer {.importc: "QWidget_previousInFocusChain".}
proc fcQWidget_acceptDrops(self: pointer, ): bool {.importc: "QWidget_acceptDrops".}
proc fcQWidget_setAcceptDrops(self: pointer, on: bool): void {.importc: "QWidget_setAcceptDrops".}
proc fcQWidget_addAction(self: pointer, action: pointer): void {.importc: "QWidget_addAction".}
proc fcQWidget_addActions(self: pointer, actions: struct_miqt_array): void {.importc: "QWidget_addActions".}
proc fcQWidget_insertActions(self: pointer, before: pointer, actions: struct_miqt_array): void {.importc: "QWidget_insertActions".}
proc fcQWidget_insertAction(self: pointer, before: pointer, action: pointer): void {.importc: "QWidget_insertAction".}
proc fcQWidget_removeAction(self: pointer, action: pointer): void {.importc: "QWidget_removeAction".}
proc fcQWidget_actions(self: pointer, ): struct_miqt_array {.importc: "QWidget_actions".}
proc fcQWidget_parentWidget(self: pointer, ): pointer {.importc: "QWidget_parentWidget".}
proc fcQWidget_setWindowFlags(self: pointer, typeVal: cint): void {.importc: "QWidget_setWindowFlags".}
proc fcQWidget_windowFlags(self: pointer, ): cint {.importc: "QWidget_windowFlags".}
proc fcQWidget_setWindowFlag(self: pointer, param1: cint): void {.importc: "QWidget_setWindowFlag".}
proc fcQWidget_overrideWindowFlags(self: pointer, typeVal: cint): void {.importc: "QWidget_overrideWindowFlags".}
proc fcQWidget_windowType(self: pointer, ): cint {.importc: "QWidget_windowType".}
proc fcQWidget_find(param1: uint): pointer {.importc: "QWidget_find".}
proc fcQWidget_childAt(self: pointer, x: cint, y: cint): pointer {.importc: "QWidget_childAt".}
proc fcQWidget_childAtWithQPoint(self: pointer, p: pointer): pointer {.importc: "QWidget_childAtWithQPoint".}
proc fcQWidget_setAttribute(self: pointer, param1: cint): void {.importc: "QWidget_setAttribute".}
proc fcQWidget_testAttribute(self: pointer, param1: cint): bool {.importc: "QWidget_testAttribute".}
proc fcQWidget_paintEngine(self: pointer, ): pointer {.importc: "QWidget_paintEngine".}
proc fcQWidget_ensurePolished(self: pointer, ): void {.importc: "QWidget_ensurePolished".}
